Updated TNS iOS to version 7 beta 3

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
       "version": "6.5.0"
     },
     "tns-ios": {
-      "version": "6.5.0"
+      "version": "7.0.0-beta.3-v8-2020-07-01-222820-05"
     }
   },
   "dependencies": {
